Media type now specifies charset, binary conversion done with apache-commons.